Version 0.3.5~dev

	* Fix stupid key error, closes: #2547

Version 0.3.4 Released on 2009/10/28

	* Prepare_ezstream_conf set 644 mode at the generated configuration, closes: #2426
	* Nagios will now see the program as "sl2d", closes: #2267.
	* Fix syntax error in the prepare_ezstream_conf.sh script, closes: #2537.

Version 0.3.3 Released on 2009/09/16

	* Add aspect ratio support, closes: #2314.
	* Crop options must precede size, refs: #2056.

Version 0.3.2 Released on 2009/09/14

	* Dummy re-release for rebuild.

Version 0.3.1 Released on 2009/09/11

	* Make sure logger is always set, refs: #2320.
	* Add stop_command to stop running streams.
	* Support addition and removal of new streams on reload, closes: #2320.
	* Finer grained comparison to detect already running command changes,
	  refs: #2320.
	* Fork twice to avoid zombies, closes: #2319.

Version 0.3.0 Released on 2009/08/05

	* Rewrite daemon option storage.
	* Add support for reloading configuration on SIGUSR2, closes: #1643.
	* Add support for subcmp ffmpeg option, closes: #2176.
	* Fix a typo in post-command execution.
	* Fix crash trying to start main command, subprocess.Popen needs to be
	  wrapped in try/except due to a bug in subprocess, closes: #2239.
	* Add wrapper script for detecting network connection problems,
	  closes: #2229.

Version 0.2.5 Released on 2009/07/17

	* Fix unsafe usage of dictionaries in Monitor.__print_process_status,
	  closes: #2219.

Version 0.2.4 Released on 2009/06/11

	* Fix scripts being distributed/installed without execution rights.
	* Add a verbose option, closes: #1970.
	* Add sample configuration file.
	* Delay respawn_command execution in SIGCHLD handler, closes: #1971.
	* Fix typo in sample configuration.
	* Add logging per process support, closes: #1917.
	* Add padding and deinterlace options.
	* Update and split man pages.
	* Do not abort trying to start a push when a pre-command fails,
	  closes: #2006.